<resources>
    <string name="app_name">VNPostDelivery</string>
    <string name="username">Tên đăng nhập</string>
    <string name="password">Password</string>
    <string name="login">Đăng nhập</string>
    <string name="exit">Thoát</string>
    <string name="author">Viet A Technology JSC</string>
    <string name="website">www.vietatech.com.vn</string>
    <string name="copyright">Copyright® 2015</string>
    <string name="app_folder">VNPostDelivery</string>

    <!-- Dialog confirm -->
    <string name="confirm_delete">Bạn có muốn xoá không?</string>
    <string name="title_warning">Thông báo</string>
    <string name="yes">Đồng ý</string>
    <string name="no">Huỷ</string>

    <string name="title_activity_fullscreen">Chúc năng chính</string>
    <string name="title_activity_userscreen">Danh sách người dùng</string>
    <string name="title_activity_add_userscreen">Thêm người dùng</string>
    <string name="title_activity_edit_userscreen">Chỉnh sửa người dùng</string>
    <string name="title_activity_delivery">Phát bưu gửi</string>
    <string name="title_activity_delivery_send">Bưu tá thu</string>
    <string name="title_activity_delivery_list">Danh sách bưu gửi</string>
    <string name="print_data">In biên nhận</string>
    <string name="title_activity_delivery_scan">Quét số lượng lớn</string>
    <string name="title_activity_signature">Ký tên</string>
    <string name="title_activity_maps">Map</string>

    <!-- Main Menu -->
    <string name="phat_buu_gui">Phát bưu gửi</string>
    <string name="buu_ta_thu">Bưu tá thu</string>
    <string name="nguoi_dung">Người dùng</string>
    <string name="xoa_buu_gui">Xoá bưu gửi</string>
    <string name="cau_hinh">Cấu hình</string>
    <string name="phat_buu_gui_for_admin">Tài khoản Admin chỉ đùng để cài đặt máy. Nếu có phát bưu gửi hãy XOÁ DATA để tránh nhầm data với BƯU TÁ</string>
    <string name="xoa_thanh_cong_buu_gui">Xoá thành công tất cả bưu gửi</string>

    <!-- Add User -->
    <string name="user_exists">Tên đăng nhập này đã tồn tại</string>
    <string name="username_is_empty">Tên đăng nhập không thể rỗng</string>
    <string name="name_is_empty">Tên không thể rỗng</string>
    <string name="password_is_empty">Mật khẩu không thể rỗng</string>
    <string name="password_does_not_match">Mật khẩu không trùng khớp</string>

    <!-- Delivery -->
    <string name="delivery"><![CDATA[ Phát được (<) ]]></string>
    <string name="no_delivery"><![CDATA[ Không phát được (>) ]]></string>
    <string name="save_delivery_success">Lưu thành công bưu gửi</string>
    <string name="update_delivery_success">Cập nhật thành công bưu gửi</string>
    <string name="delivery_same">Trùng bưu gửi</string>
    <string name="delete_delivery_success">Xoá thành công bưu gửi</string>
    <string name="receiver">Người nhận: </string>
    <string name="duong_su">Đương sự</string>
    <string name="no_delivery_message">Không phát được</string>
    <string name="loc_buu_gui">Lốc bưu gửi = %s</string>

    <!-- Delivery Error -->
    <string name="error_no_code">Chưa quét bưu gửi: </string>
    <string name="error_no_name">Vui lòng nhập tên người nhận </string>
    <string name="delete_error_no_code">Chưa quét mã bưu gửi để xoá khỏi danh sách </string>

    <string name="agreement">I agree the terms and conditions.</string>
    <string name="clear_pad">Clear Pad</string>
    <string name="save_signature">Save Signature</string>
</resources>
