<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="vn.com.vietatech.phatbuugui.LoginActivity">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
         >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:src="@drawable/logo" />



        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/linearLayout1"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_centerInParent="true" >

            <EditText
                android:id="@+id/txtUsername"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:singleLine="true"
                android:hint="@string/username">

                <requestFocus />
            </EditText>

            <LinearLayout
                android:layout_width="40dp"
                android:layout_height="match_parent" >
            </LinearLayout>

            <EditText
                android:id="@+id/txtPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:singleLine="true"
                android:hint="@string/password">

            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/linearLayout1"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_centerInParent="true" >



            <Button
                android:id="@+id/btnExit"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/exit" />

            <LinearLayout
                android:layout_width="40dp"
                android:layout_height="match_parent" >
            </LinearLayout>
            <Button
                android:id="@+id/btnLogin"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/login" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout1"
            android:gravity="right"
            android:paddingRight="16dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/linearLayout1"
                android:layout_below="@+id/linearLayout1"
                android:text="@string/author"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ff0000"
                android:textSize="14dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/linearLayout1"
                android:layout_below="@+id/linearLayout1"
                android:text="@string/website"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="13dp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/linearLayout1"
                android:layout_below="@+id/linearLayout1"
                android:text="@string/copyright"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="11dp" />

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
